# Trading-Agent

./: .env.example  .gitignore  BREEZEPILOT_ONE_SHOT_BUILD_PROMPT.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt
backend/: Dockerfile  README.md  __init__.py  deployment.md  pyproject.toml  requirements-optional.txt
backend/app/: __init__.py  advanced.py  agent.py  auth.py  automation.py  breeze.py  config.py  constants.py  credentials.py  improvement.py  instruments.py  main.py  rate_limit.py  risk.py  scanner.py  schemas.py  state.py  store.py  time_utils.py  trading.py
backend/app/api/: runtime.py
backend/app/broker/: base.py  breeze_adapter.py  factory.py  paper_adapter.py
backend/app/core/: __init__.py  config.py  redaction.py  security.py
backend/app/db/: database.py  models.py
backend/app/execution/: __init__.py  order_manager.py  position_manager.py  square_off.py
backend/app/hermes/: __init__.py  analyzer.py  client.py  evaluation.py  suggestion_manager.py
backend/app/market_data/: __init__.py  collector.py  historical.py  live_feed.py
backend/app/reporting/: eod_report.py  metrics.py
backend/app/risk/: engine.py  rules.py
backend/app/strategies/: __init__.py  base.py  breakout.py  moving_average.py  opening_range_breakout.py  rsi.py  vwap.py
backend/app/tests/: test_paper_adapter.py  test_risk_engine.py  test_security_and_withdrawal.py  test_square_off.py  (+1 more)
backend/deploy/: breezepilot-healthcheck.service  breezepilot-healthcheck.timer
backend/tests/: test_backend.py
docs/: flow.md  (+6 more)
(+47 files in other folders)
