[project]
name = "trading-agent-backend"
version = "0.1.0"
description = "Paper-first ICICI Breeze trading assistant backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "SQLAlchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "python-dotenv>=1.0.1",
  "redis>=5.2.0",
  "celery>=5.4.0",
  "APScheduler>=3.10.4",
  "httpx>=0.28.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.2",
  "black>=24.10.0",
  "mypy>=1.13.0"
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
